--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8"/>
-    <script src="antiwordfilter.js"></script>
-    <link rel="stylesheet" href="words.css">
+    <script src="anti.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
